--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             id="budget"
             placeholder="Daily calorie budget"
             required
-          />
+          /> <br><br>
           <fieldset id="breakfast">
             <legend>Breakfast</legend>
-            <div class="input-container"></div>
+            <div class="input-container"><br></div>
           </fieldset>
           <fieldset id="lunch">
             <legend>Lunch</legend>
-            <div class="input-container"></div>
+            <div class="input-container"><br></div>
           </fieldset>
           <fieldset id="dinner">
             <legend>Dinner</legend>
@@ -51,7 +51,7 @@
               </select>
               <button type="button" id="add-entry">Add Entry</button>
             </span>
-          </div>
+          </div><br>
           <div>
             <button type="submit">
               Calculate Remaining Calories
